Fixed bug where the scrollbar would be placed to the left and on top of the text of menu items in RTL mode.

--- a/js/tinymce/skins/lightgray/MenuItem.less
+++ b/js/tinymce/skins/lightgray/MenuItem.less
@@ -110,6 +110,10 @@ div.mce-menu .mce-menu-item-sep, .mce-menu-item-sep:hover {
 
 // RTL
 
+.mce-menu.mce-rtl {
+	direction: rtl;
+}
+
 .mce-rtl .mce-menu-item {
 	text-align: right;
 	direction: rtl;
